@@ -6,6 +6,11 @@
 extern void log_startup(void);
 extern void log_listen(const char *);
 
+#ifdef DUMPCACHE
+extern void log_slurp(int);
+extern void log_dump(int);
+#endif
+
 extern void log_query(uint64 *,const char *,unsigned int,const char *,const char *,const char *);
 extern void log_querydrop(uint64 *);
 extern void log_querydone(uint64 *,unsigned int);
